# graph-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ggml-onnx.h
scripts/: fold_shape_and_constants.py  generate_matmul_graphs.py  onnx_to_ggml.py  run_onnx.py
src/: ggml-onnx.h
